FIXED icon-stretching bug

--- a/src/App.css
+++ b/src/App.css
@@ -256,10 +256,10 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   overflow: hidden;
   background-color:white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  display:flex;
+  /* display:flex;
   flex-wrap:wrap;
   align-content: center;
-  justify-content: center;
+  justify-content: center; */
   
 }
 
